--- a/index.html
+++ b/index.html
@@ -1,1 +1,159 @@
+<!DOCTYPE html>
+<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<html lang="en" dir="ltr">
 
+<head>
+    <meta charset="utf-8">
+    <title>Memory Card Game in JavaScript | CodingNepal</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+    
+    <div class="wrapper">
+        <div class="header">
+            <h1>Crypto-Currency pairs Game</h1>
+            <h3>Make your best score :</h3>
+          
+            <p id="max"><span id="sec">00</span>:<span id="count">00</span></p>
+        </div>
+        <ul class="cards">
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-1.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-6.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-3.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-2.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-1.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-5.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-2.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-6.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-3.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-4.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-5.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-4.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-4.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-4.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-4.png" alt="card-img">
+                </div>
+            </li>
+            <li class="card">
+                <div class="view front-view">
+                    <img src="images/que_icon.svg" alt="icon">
+                </div>
+                <div class="view back-view">
+                    <img src="images/img-4.png" alt="card-img">
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <script src="app.js"></script>
+
+</body>
+
+</html>
