all work is donee..

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Crypto-Currency pairs Game</h1>
             <h3>Make your best score :</h3>
           
-            <p id="max"><span id="sec">00</span>:<span id="count">00</span></p>
+            <p id="max"><span id="sec">00</span><span id="count"></span></p>
         </div>
         <ul class="cards">
             <li class="card">
