--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
 <html lang="en" dir="ltr">
-
 <head>
     <meta charset="utf-8">
-    <title>Memory Card Game in JavaScript | CodingNepal</title>
-
+    <title>Memory Card Game in JavaScript</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 
@@ -18,7 +15,7 @@
             <h1>Crypto-Currency pairs Game</h1>
             <h3>Make your best score :</h3>
           
-            <p id="max"><span id="sec">00</span><span id="count"></span></p>
+            <p id="max"><span id="hr">00</span>:<span id="min">00</span>:<span id="sec">00</span><span id="count"></span></p>
         </div>
         <ul class="cards">
             <li class="card">
